--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-  "token": "ODYwMzY3OTcyMjQ4NzE1MjY0.YN6OHQ.XNqQ6uAU3qEu8RU3SQEm1mOwh9U",
+  "token": "BOT_PREFIX",
   "default_prefix": "g!",
 }
